syntax = "proto3";

package core.messages;

import "common.proto";

message GetAggregateMessage {
  AggregateGid gid = 1;
}

message GetAggregateResponseMessage {
  optional string aggregateJson = 1;
}

message ClientHttpMessage {
  oneof message {
    GetAggregateMessage getAggregate = 1;
  }
}
